@@ -1,4 +1,5 @@
 5.0.2 -> 5.0.3:
+    - rpm.org: make find-lang --with-gnome picks up omf files (rhbz#251400) 
     - proyvind: python: add back RPMSENSE_FIND_REQUIRES, needed by rpmlint
     - proyvind: trim multiple slashes from buildroot for check-files script (from Nanar/Olivier Thauvin)
     - proyvind: make rpmdb cpp compliant (from spturtle/Christiaan Welvaart)
